<resources>
    <string name="app_name">FamilyMap</string>
    <string name="clearButton">Clear</string>
    <string name="submitButton">Submit</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="serverHost">Server Host</string>
    <string name="serverPort">Server Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registerButton">Register</string>
    <string name="signinButton">Sign In</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lifeEvents">Life Events</string>
    <string name="family">Family</string>
    <string name="mapMenuDefaultText">Click on an event marker to see event details</string>
    <string name="file">File</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logoutDescription">Return to login screen</string>
    <string name="lifeStoryName">Life Story Lines</string>
    <string name="lifeStoryDescription">Show life story lines</string>
    <string name="familyTreeName">Family Tree Lines</string>
    <string name="familyTreeDescription">Show family tree lines</string>
    <string name="spouseName">Spouse Lines</string>
    <string name="spouseDescription">Show spouse lines</string>
    <string name="fathersSideName">Father\'s Side</string>
    <string name="fathersSideDescription">Filter by father\'s side of family</string>
    <string name="mothersSideName">Mother\'s Side</string>
    <string name="mothersSideDescription">Filter by mother\'s side of family</string>
    <string name="maleEventsName">Male Events</string>
    <string name="genderEventsDescription">Filter events based on gender</string>
    <string name="femaleEventsName">Female Events</string>
</resources>